fix: improve spacing for left and right labels

--- a/src/assets/styles/all.css
+++ b/src/assets/styles/all.css
@@ -691,6 +691,7 @@ a:visited {
     position: absolute;
     top: 40%;
     transform: rotate(-90deg);
+    transform-origin: bottom;
 }
 
 .pull-right {
@@ -698,6 +699,7 @@ a:visited {
     right: -1.5rem;
     top: 40%;
     transform: rotate(90deg);
+    transform-origin: bottom;
 }
 
 .can {
